@@ -11,7 +11,6 @@
 		<version>2.3.0-SNAPSHOT</version>
 	</parent>
 
-
 	<dependencies>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -52,4 +51,16 @@
       		<url>http://svn.code.sf.net/p/bionlp/code/repo</url>
     	</repository>
   	</repositories>
+  	<build>
+  		<plugins>
+  			<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+    			<version>2.20</version>
+    			<configuration>
+        			<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+    			</configuration>
+  			</plugin>
+	  	</plugins>
+  	</build>
 </project>
